CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT( Main )

SET( CMAKE_CXX_COMPILER g++ )
SET( CMAKE_CXX_STANDARD 11)

SET( CMAKE_BUILD_TYPE Debug )

SET( LINUX_LIB_DIR /usr/lib/x86_64-linux-gnu )
FIND_PACKAGE( OpenCV REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
FIND_PACKAGE( Boost COMPONENTS filesystem system REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

SET( APPS_DIR ${CMAKE_CURRENT_SOURCE_DIR} )
SET( RELEASE_DIR ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_EXECUTABLE( Main.out ${APPS_DIR}/Main.cpp ${SUB_INCLUDES} )
TARGET_LINK_LIBRARIES( Main.out ${OpenCV_LIBS} ${Boost_LIBRARIES} stdc++fs )
SET_TARGET_PROPERTIES( Main.out PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${RELEASE_DIR} )
